[package]
name = "tiny-transport-import"
version = "0.1.0"
authors = ["Jakob Stigloher <pixunil@posteo.eu>"]
edition = "2018"
description = "Imports Gtfs data for the simulation"
repository = "https://github.com/pixunil/tiny-transport"
license = "MIT"

[features]
default = []

progress = ["console", "indicatif"]

[dependencies]
bincode = "1"
console = { version = "0.14", optional = true }
chrono = { version = "0.4", features = ["serde"] }
csv = "1"
geomorph = "1.1"
indicatif = { version = "0.15", optional = true }
itertools = "0.9"
na = { package = "nalgebra", version = "0.23", features = ["serde-serialize"] }
ordered-float = "1.0"
serde = "1"
serde_derive = "1"
zip = { version = "0.5", default-features = false, features = ["deflate", "bzip2"] }

common = { package = "tiny-transport-common", path = "../common" }
simulation = { package = "tiny-transport-simulation", path = "../simulation" }
storage = { package = "tiny-transport-storage", path = "../storage", features = ["fixtures"] }

[dev-dependencies]
approx = "0.4"
serde_test = "1"
