[package]
name = "gtfs-sim-serialization"
version = "0.1.0"
authors = ["Jakob Stigloher <pixunil@posteo.eu>"]
edition = "2018"
description = "Stores simulation data space-efficient"
repository = "https://github.com/pixunil/gtfs-sim"
license = "MIT"

[features]
default = []

[dependencies]
serde = "1"
serde_derive = "1"
nalgebra = { version = "0.18.0", features = ["serde-serialize"] }

gtfs-sim-simulation = { path = "../simulation" }
