[package]
name = "gtfs-sim-simulation"
version = "0.1.0"
authors = ["Jakob Stigloher <pixunil@posteo.eu>"]
edition = "2018"
description = "An experiment to render a minimalistic transport simulation with WebGL and Wasm."
repository = "https://github.com/pixunil/gtfs-sim"
license = "MIT"

[features]
default = []

fixtures = ["test_utils"]

[dependencies]
approx = "0.3"
itertools = "0.9"
na = { package = "nalgebra", version = "0.21", features = ["serde-serialize"] }
serde = "1"
serde_derive = "1"
test_utils = { package = "gtfs-sim-test", path = "../test", optional = true }
