[package]
name = "gtfs-sim-storage"
version = "0.1.0"
authors = ["Jakob Stigloher <pixunil@posteo.eu>"]
edition = "2018"
description = "Stores simulation data space-efficient"
repository = "https://github.com/pixunil/gtfs-sim"
license = "MIT"

[features]
fixtures = ["test_utils"]

[dependencies]
itertools = "0.9"
na = { package = "nalgebra", version = "0.21", features = ["serde-serialize"] }
serde = "1"
serde_derive = "1"

simulation = { package = "gtfs-sim-simulation", path = "../simulation", features = ["fixtures"] }
test_utils = { package = "gtfs-sim-test", path = "../test", optional = true }
