[package]
name = "tiny-transport-storage"
version = "0.1.0"
authors = ["Jakob Stigloher <pixunil@posteo.eu>"]
edition = "2018"
description = "Stores simulation data space-efficient"
repository = "https://github.com/pixunil/tiny-transport"
license = "MIT"

[features]
fixtures = []

[dependencies]
itertools = "0.9"
na = { package = "nalgebra", version = "0.23", features = ["serde-serialize"] }
serde = "1"
serde_derive = "1"

common = { package = "tiny-transport-common", path = "../common" }
simulation = { package = "tiny-transport-simulation", path = "../simulation", features = ["fixtures"] }
