[package]
name = "gtfs-sim-wasm"
version = "0.1.0"
authors = ["Jakob Stigloher <pixunil@gmx.de>"]
edition = "2018"
description = "Wasm binding of the simulation"
repository = "https://github.com/pixunil/gtfs-sim"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[features]
default = []

[dependencies]
bincode = "1"
console_error_panic_hook = { version = "0.1.6", optional = true }
na = { package = "nalgebra", version = "0.21", features = ["serde-serialize"] }
wasm-bindgen = "0.2"

simulation = { package = "gtfs-sim-simulation", path = "../simulation" }
storage = { package = "gtfs-sim-storage", path = "../storage" }

[dev-dependencies]
approx = "0.3"
