[package]
name = "tiny-transport-wasm"
version = "0.1.0"
authors = ["Jakob Stigloher <pixunil@posteo.eu>"]
edition = "2018"
description = "Wasm binding of the simulation"
repository = "https://github.com/pixunil/tiny-transport"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[features]
default = []

[dependencies]
bincode = "1"
console_error_panic_hook = { version = "0.1.6", optional = true }
na = { package = "nalgebra", version = "0.23", features = ["serde-serialize"] }
wasm-bindgen = "0.2"

simulation = { package = "tiny-transport-simulation", path = "../simulation" }
storage = { package = "tiny-transport-storage", path = "../storage" }

[dev-dependencies]
approx = "0.4"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]
